--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.17.1"
+    "chai": "^4.3.7",
+    "hardhat": "^2.17.1",
+    "mocha": "^10.2.0"
   }
 }
