--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "chai": "^4.3.7",
+    "ethereum-waffle": "^4.0.10",
     "hardhat": "^2.17.1",
     "mocha": "^10.2.0"
   }
